# Cascoin

./: .gitignore  .woodpecker.yml  BEAUTIFUL_GRAPH_FEATURES.md  CASCOIN_WHITEPAPER.md  CHECK_SUCCESS.sh  CLAUDE.md  CRITICAL_BUG_FOUND.md  CVM_DASHBOARD_SECURITY.md  CVM_IMPLEMENTATION_SUMMARY.md  CVM_TRANSACTION_PLAN.md  D3JS_IMPLEMENTATION_PLAN.md  DASHBOARD_CRASH_FIX.md  E2E_TEST_INSTRUCTIONS.md  E2E_TEST_REPORT.md  EMBEDDED_HTML_SUCCESS.md  FINAL_DIAGNOSIS.md  FINAL_STATUS.md  FINAL_WEB_OF_TRUST_STATUS.md  GRAPH_ZOOM_UPDATE.md  HAT_IMPLEMENTATION_PLAN.md  HAT_V2_COMPLETION.md  HAT_V2_STATUS.md  HTTP_SERVER_ARCHITECTURE.md  INNOVATIVE_TRUST_CONCEPTS.md  MINING_ISSUE_FOUND.md  MINING_SOLUTION.md  NETWORK_FIX.md  NEXT_SESSION_PROMPT.md  ON_CHAIN_IMPLEMENTATION.md  PHASE3_COMPLETE.md  PHASE3_COMPLETE_SUMMARY.md  PHASE3_DEBUG_STATUS.md  PHASE3_FINAL_SUMMARY.md  PHASE3_FINAL_TEST_RESULTS.md  PHASE3_PLAN.md  PHASE3_STATUS.md  PHASE3_SUCCESS.md  PHASE4_COMPLETE.md  PHASE4_FINAL_STATUS.md  PHASE4_GUI_OPTIONS.md  (+28 more)
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  address_quantum.cpp  address_quantum.h  base58.cpp  base58.h  bctdb.cpp  bctdb.h  bech32.cpp  bech32.h  beenft.cpp  beenft.h  bitcoin-tx.cpp  chain.cpp  chain.h  chainparams.cpp  init.cpp  key.cpp  key.h  keystore.cpp  miner.cpp  miner.h  mousenft.cpp  mousenft.h  net.cpp  net_processing.cpp  net_processing.h  pow.cpp  pow.h  protocol.cpp  protocol.h  pubkey.cpp  pubkey.h  quantum_registry.cpp  quantum_registry.h  quantum_registry_fwd.h  rialto.cpp  (+7 more)
src/consensus/: params.h  tx_verify.cpp
src/crypto/: scrypt.cpp  scrypt.h
src/crypto/quantum/: falcon.cpp  falcon.h
src/cvm/: EXAMPLES.md  README.md  access_control_audit.cpp  access_control_audit.h  activation.cpp  activation.h  address_index.cpp  address_index.h  anomaly_detector.cpp  anomaly_detector.h  backward_compat.cpp  backward_compat.h  behaviormetrics.cpp  behaviormetrics.h  block_validator.cpp  block_validator.h  blockprocessor.cpp  blockprocessor.h  bytecode_detector.cpp  bytecode_detector.h  cleanup_manager.cpp  cleanup_manager.h  clustertrustquery.cpp  clustertrustquery.h  clusterupdatehandler.cpp  clusterupdatehandler.h  commit_reveal.cpp  commit_reveal.h  consensus_safety.cpp  consensus_safety.h  consensus_validator.cpp  consensus_validator.h  contract.cpp  contract.h  contract_state_sync.cpp  contract_state_sync.h  cross_chain_bridge.cpp  cross_chain_bridge.h  cvm.cpp  cvm.h  (+92 more)
src/httpserver/: cvmdashboard.cpp  cvmdashboard.h  cvmdashboard_contracts.h  cvmdashboard_evm.h  cvmdashboard_html.h  cvmdashboard_html.h.backup  l2_dashboard.cpp  l2_dashboard.h  l2_dashboard_html.h  l2_websocket.cpp  l2_websocket.h  reward_dashboard.cpp  reward_dashboard.h  reward_dashboard_html.h
src/l2/: Makefile.am  account_state.h  block_fee_integration.cpp  block_fee_integration.h  bridge_contract.cpp  bridge_contract.h  burn_parser.cpp  burn_parser.h  burn_registry.cpp  burn_registry.h  burn_validator.cpp  burn_validator.h  challenge_handler.cpp  challenge_handler.h  collusion_detector.cpp  collusion_detector.h  cross_layer_messaging.cpp  cross_layer_messaging.h  data_availability.cpp  data_availability.h  encrypted_mempool.cpp  encrypted_mempool.h  fee_distributor.cpp  fee_distributor.h  forced_inclusion.cpp  forced_inclusion.h  fraud_proof.cpp  fraud_proof.h  l1_chain_monitor.cpp  l1_chain_monitor.h  l2_block.cpp  l2_block.h  l2_block_validator.cpp  l2_block_validator.h  l2_chainparams.cpp  l2_chainparams.h  l2_common.cpp  l2_common.h  l2_config.cpp  l2_config.h  (+39 more)
src/policy/: policy.cpp  policy.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: addresstablemodel.cpp  askpassphrasedialog.cpp  askpassphrasedialog.h  beenftpage.cpp  beenftpage.h  beenfttablemodel.cpp  beenfttablemodel.h  bitcoin.cpp  bitcoin.qrc  bitcoingui.cpp  bitcoingui.h  hivedialog.cpp  hivedialog.h  hivetablemodel.cpp  hivetablemodel.h  l2page.cpp  l2page.h  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  receivecoinsdialog.cpp  rpcconsole.cpp  safeinvoke.h  transactionrecord.cpp  transactionrecord.h  transactiontablemodel.cpp  transactionview.cpp  walletframe.cpp  walletframe.h  walletmodel.cpp  walletmodel.h  walletview.cpp  walletview.h
src/qt/forms/: hivedialog.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  cvm.cpp  l2.cpp  l2_burn.cpp  mining.cpp  misc.cpp  protocol.cpp  protocol.h  quantum.cpp  rawtransaction.cpp  register.h
src/script/: interpreter.cpp  interpreter.h  ismine.cpp  quantum_consensus.cpp  quantum_registry_stub.cpp  script.cpp  script.h  script_error.cpp  script_error.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: autogen.sh  configure.ac
src/test/: DoS_tests.cpp  bctdb_tests.cpp  bloom_tests.cpp  challenger_reward_tests.cpp  cvm_backward_compat_tests.cpp  cvm_bytecode_detector_tests.cpp  cvm_consensus_safety_tests.cpp  cvm_dashboard_contracts_tests.cpp  cvm_enhanced_storage_tests.cpp  cvm_integration_tests.cpp  cvm_quantum_tests.cpp  cvm_sustainable_gas_tests.cpp  cvm_trust_context_tests.cpp  key_tests.cpp  l2_block_tests.cpp  l2_bridge_contract_tests.cpp  l2_burn_mint_integration_tests.cpp  l2_burn_parser_tests.cpp  l2_burn_registry_tests.cpp  l2_burn_validator_tests.cpp  l2_challenge_handler_tests.cpp  l2_collusion_detector_tests.cpp  l2_cross_layer_messaging_tests.cpp  l2_data_availability_tests.cpp  l2_encrypted_mempool_tests.cpp  l2_faucet_tests.cpp  l2_fee_distributor_tests.cpp  l2_forced_inclusion_tests.cpp  l2_fraud_proof_tests.cpp  l2_leader_election_tests.cpp  l2_mint_consensus_tests.cpp  l2_minter_tests.cpp  l2_rate_limiter_tests.cpp  l2_registry_tests.cpp  l2_reorg_monitor_tests.cpp  l2_reputation_tests.cpp  l2_security_monitor_tests.cpp  l2_sequencer_consensus_tests.cpp  l2_sequencer_discovery_tests.cpp  l2_sparse_merkle_tree_tests.cpp  (+11 more)
src/univalue/: configure~
src/wallet/: rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp
(+196 files in other folders)
