# Copyright (c) 2024 The Cascoin Core developers
# Distributed under the MIT software license, see the accompanying
# file COPYING or http://www.opensource.org/licenses/mit-license.php.

# L2 (Layer 2) module Makefile
# This module provides native Layer-2 scaling functionality for Cascoin

# L2 header files
L2_H = \
  l2/account_state.h \
  l2/l2_common.h \
  l2/l2_chainparams.h \
  l2/l2_config.h \
  l2/leader_election.h \
  l2/sequencer_discovery.h \
  l2/sparse_merkle_tree.h \
  l2/state_manager.h

# L2 source files
L2_CPP = \
  l2/l2_common.cpp \
  l2/l2_chainparams.cpp \
  l2/l2_config.cpp \
  l2/leader_election.cpp \
  l2/sequencer_discovery.cpp \
  l2/sparse_merkle_tree.cpp \
  l2/state_manager.cpp
