# Copyright (c) 2024 The Cascoin Core developers
# Distributed under the MIT software license, see the accompanying
# file COPYING or http://www.opensource.org/licenses/mit-license.php.

# L2 (Layer 2) module Makefile
# This module provides native Layer-2 scaling functionality for Cascoin

# L2 header files
L2_H = \
  l2/account_state.h \
  l2/bridge_contract.h \
  l2/challenge_handler.h \
  l2/collusion_detector.h \
  l2/cross_layer_messaging.h \
  l2/data_availability.h \
  l2/encrypted_mempool.h \
  l2/fee_distributor.h \
  l2/forced_inclusion.h \
  l2/fraud_proof.h \
  l2/l2_block.h \
  l2/l2_block_validator.h \
  l2/l2_common.h \
  l2/l2_chainparams.h \
  l2/l2_config.h \
  l2/l2_peer_manager.h \
  l2/l2_registry.h \
  l2/l2_reputation.h \
  l2/l2_transaction.h \
  l2/leader_election.h \
  l2/rate_limiter.h \
  l2/reorg_monitor.h \
  l2/security_monitor.h \
  l2/sequencer_consensus.h \
  l2/sequencer_discovery.h \
  l2/sparse_merkle_tree.h \
  l2/state_manager.h \
  l2/timestamp_validator.h

# L2 source files
L2_CPP = \
  l2/bridge_contract.cpp \
  l2/challenge_handler.cpp \
  l2/collusion_detector.cpp \
  l2/cross_layer_messaging.cpp \
  l2/data_availability.cpp \
  l2/encrypted_mempool.cpp \
  l2/fee_distributor.cpp \
  l2/forced_inclusion.cpp \
  l2/fraud_proof.cpp \
  l2/l2_block.cpp \
  l2/l2_block_validator.cpp \
  l2/l2_common.cpp \
  l2/l2_chainparams.cpp \
  l2/l2_config.cpp \
  l2/l2_peer_manager.cpp \
  l2/l2_registry.cpp \
  l2/l2_reputation.cpp \
  l2/l2_transaction.cpp \
  l2/leader_election.cpp \
  l2/rate_limiter.cpp \
  l2/reorg_monitor.cpp \
  l2/security_monitor.cpp \
  l2/sequencer_consensus.cpp \
  l2/sequencer_discovery.cpp \
  l2/sparse_merkle_tree.cpp \
  l2/state_manager.cpp \
  l2/timestamp_validator.cpp
